Fixed CTA margin on mobile view

--- a/assets/css/2-base/_landing-page.sass
+++ b/assets/css/2-base/_landing-page.sass
@@ -52,7 +52,7 @@
 
           @media (max-width: $mobile)
             width: 100%
-            margin: 0.5em
+            margin: 0.5em 0 
 
   .featured-videos
     text-align: center
